# scholia

./: .gitattributes  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.local-appimage.md  README.local-components.md  README.local-linux-build.md  README.md  VERSION.txt  aboutdata.h  scholia.categories
autotests/: annotationstest.cpp  annotationtoolbartest.cpp
conf/: okular.kcfg
core/: annotations.cpp  annotations.h  annotations_p.h  bookmarkmanager.cpp  debug.cpp  document.cpp  document.h  document_p.h  documentcommands.cpp  documentcommands_p.h  generator.cpp  generator.h  latexnotegeometry.h  page.cpp
docs/: latex-native-slides-vision.md  latex-note-pdf-spec.md  page-editing-annotation-model.md  template-note-pdf-spec.md
generators/: CMakeLists.txt
generators/comicbook/: okularApplication_comicbook.desktop
generators/djvu/: okularApplication_djvu.desktop
generators/dvi/: okularApplication_dvi.desktop
generators/epub/: okularApplication_epub.desktop
generators/fax/: okularApplication_fax.desktop
generators/fictionbook/: okularApplication_fb.desktop
generators/kimgio/: okularApplication_kimgio.desktop
generators/markdown/: okularApplication_md.desktop
generators/mobipocket/: okularApplication_mobi.desktop
generators/poppler/: CMakeLists.txt  annots.cpp  annots.h  generator_pdf.cpp  generator_pdf.h  okularApplication_pdf.desktop
generators/poppler/conf/: pdfsettings.kcfg
generators/spectre/: okularApplication_ghostview.desktop
generators/tiff/: okularApplication_tiff.desktop
generators/txt/: okularApplication_txt.desktop
generators/xps/: okularApplication_xps.desktop
gui/: debug_ui.cpp  guiutils.cpp  guiutils.h  pagepainter.cpp
icons/: CMakeLists.txt  scholia.rc  scholia.rc.in
interfaces/: viewerinterface.h
linux-build/scripts/: build-okular-appimage.sh  build-okular-local.sh  install-poppler-data.sh  okular-wrapper  prepare-okular-appdir.sh
mobile/app/: CMakeLists.txt
part/: annotationactionhandler.cpp  annotationactionhandler.h  annotationpopup.cpp  annotationpopup.h  annotationpropertiesdialog.cpp  annotationwidgets.cpp  annotationwidgets.h  annotwindow.cpp  annotwindow.h  dlgannotations.cpp  dlgannotations.h  dlggeneral.cpp  editannottooldialog.cpp  editannottooldialog.h  latexnoteutils.cpp  latexnoteutils.h  latexrenderer.cpp  latexrenderer.h  pageview.cpp  pageview.h  pageviewannotator.cpp  pageviewannotator.h  pageviewmouseannotation.cpp  pageviewmouseannotation.h  part-viewermode.rc  part.cpp  part.h  part.qrc  part.rc  sidebar.cpp  sidebar.h  templatenoteutils.cpp  templatenoteutils.h  thumbnaillist.cpp  thumbnaillist.h  toc.cpp  toc.h
part/data/: CMakeLists.txt  latex-default-note.tex  tools.xml  toolsQuick.xml
po/zh_CN/: okular.po  okular_poppler.po
scripts/: build-local-packages.ps1
shell/: CMakeLists.txt  main.cpp  okular_main.cpp  org.jairy.scholia.appdata.xml  org.jairy.scholia.desktop  shell.cpp  shell.h  shell.qrc  shell.rc  shellutils.h  welcomescreen.cpp  welcomescreen.ui
windows-build/: .gitignore  KF6_SDK_BOOTSTRAP.md  PDF_ONLY_PACKAGING_TODO.md  README.md
windows-build/cmake/: bootstrap-kf6-sdk.cmake  build-freetype-sdk.cmake  build-kf6-module.cmake  build-libintl-shim-sdk.cmake  build-poppler-sdk.cmake  build-windows.cmake  build-zlib-sdk.cmake  deploy-runtime.cmake  install-gettext-native-sdk.cmake  install-winflexbison-sdk.cmake  kf6-sdk-common.cmake  package-windows.cmake
windows-build/installer/: okular-pdf-only.iss  scholia-installer.iss  scholia-stemtex-support.iss
windows-build/manifests/: dependency-scan.json  pdf-only-smoke-result.md  required-components.txt
windows-build/scripts/: bootstrap-kf6-sdk.ps1  build-freetype-sdk.ps1  build-kf6-module.ps1  build-libintl-shim-sdk.ps1  build-okular-local.ps1  build-okular-pdf-only-installer.ps1  build-okularpart-incremental.ps1  build-poppler-incremental.ps1  build-poppler-sdk.ps1  build-scholia-installer.ps1  build-scholia-standalone.ps1  build-zlib-sdk.ps1  craft.ps1  deploy-scholia-standalone-runtime.ps1  install-gettext-native-sdk.ps1  install-tex-packages.ps1  install-tinytex.ps1  install-tinyxml2-local.ps1  install-winflexbison-sdk.ps1  prepare-okular-pdf-only-stage.ps1  rebuild-okular-submodules-foreground.ps1  set-tinytex-user-path.ps1  smoke-test-okular-pdf-only-stage.ps1  smoke-test-scholia-stage.ps1  test-msvc-env.ps1
windows-build/sdk-sources/libintl-shim/: CMakeLists.txt  libintl-shim.c  libintl.h  msgfmt-shim.c
windows-build/tests/cjk-xelatex/: README.md  build-cjk-xelatex-smoke.ps1  cjk-xelatex-smoke.tex
